clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__va_arg_13.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/va-arg-13.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn dummy(%arg1: rec___va_list_tag*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: rec___va_list_tag*):
        %25 = alloca rec___va_list_tag*, "vap", align 8
        store %arg1, %25
        scope {
                %26 = load %25 : rec___va_list_tag*, align 8
                va_arg
                %28 = const 1234 : s32i
                cmp
                if %29 {
                        %30 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        return
}
fn test(%arg0: s32i, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %7 = alloca s32i, "fmt", align 4
        %8 = alloca rec_ScanfState, "state", align 8
        %9 = alloca rec_ScanfState*, "statep", align 8
        store %arg0, %7
        store %8, %9, align 8
        %10 = load %9 : rec_ScanfState*, align 8
        get_member
        %12 = cast(array_to_ptrdecay) %11 : rec___va_list_tag*
        va_start
        %13 = load %9 : rec_ScanfState*, align 8
        get_member
        %15 = cast(array_to_ptrdecay) %14 : rec___va_list_tag*
        call @dummy(%15) [all]
        %16 = load %9 : rec_ScanfState*, align 8
        get_member
        %18 = cast(array_to_ptrdecay) %17 : rec___va_list_tag*
        va_end
        get_member
        %20 = cast(array_to_ptrdecay) %19 : rec___va_list_tag*
        va_start
        get_member
        %22 = cast(array_to_ptrdecay) %21 : rec___va_list_tag*
        call @dummy(%22) [all]
        get_member
        %24 = cast(array_to_ptrdecay) %23 : rec___va_list_tag*
        va_end
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 456 : s32i
        %3 = const 1234 : s32i
        call @test(%2, %3) [all]
        %4 = get_global @exit : (s32i) -> void*
        %5 = const 0 : s32i
        call @exit(%5) [all]
        %6 = load %0 : s32i
        return %6
}
